--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Protruck Trip Reader</string>
     <string name="device_ID">Registration Failed\nDevice ID 123456789</string>
+    <string name="bilty_no">Bilty #\nبلٹی نمبر</string>
+    <string name="station">Station\nاسٹیشن</string>
+    <string name="reciever">Reciever\nوصول کرنے والا</string>
 </resources>
